feat(event): add create event screen with date/time picker and EAS build config
- Add new event creation form with title, description, banner URL,
  event type selector, date/time pickers, and max participants
- Integrate react-native-paper-dates for date and time selection
- Add FAB button on event list screen to navigate to create event
- Configure EAS build with development, preview, and production profiles
- Update app.json with Android package name and EAS project ID
- Wrap app layout with SafeAreaProvider for proper safe area handling
- Upgrade react-native-reanimated to v4.1.1

--- a/app.json
+++ b/app.json
@@ -12,6 +12,7 @@
       "supportsTablet": true
     },
     "android": {
+      "package": "com.iamsanjaygupta.supersports",
       "adaptiveIcon": {
         "backgroundColor": "#E6F4FE",
         "foregroundImage": "./assets/images/android-icon-foreground.png",
@@ -44,6 +45,12 @@
     "experiments": {
       "typedRoutes": true,
       "reactCompiler": true
+    },
+    "extra": {
+      "router": {},
+      "eas": {
+        "projectId": "2a934300-d795-4cb4-9465-50b61286535c"
+      }
     }
   }
 }
