--- a/package.json
+++ b/package.json
@@ -36,8 +36,9 @@
     "react-native": "0.81.5",
     "react-native-gesture-handler": "~2.28.0",
     "react-native-paper": "^5.14.5",
+    "react-native-paper-dates": "^0.22.57",
     "react-native-popover-view": "^6.1.0",
-    "react-native-reanimated": "~3.17.4",
+    "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "^5.4.0",
     "react-native-screens": "~4.16.0",
     "react-native-web": "~0.21.0",
