--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "react-native-paper-dates": "^0.22.57",
     "react-native-popover-view": "^6.1.0",
     "react-native-reanimated": "~4.1.1",
-    "react-native-safe-area-context": "^5.4.0",
+    "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
     "react-native-web": "~0.21.0",
     "react-native-worklets": "0.5.1",
